deployment/vod-frontend/frontend-app/frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: vod-frontend
  labels:
    app: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: frontend
    app.openshift.io/runtime: python
    app.kubernetes.io/part-of: frontend-app
    app.openshift.io/runtime-version: 3.9-ubi8
  annotations:
    app.openshift.io/vcs-uri: https://github.com/nutanixdev/modern-app-demo.git
    app.openshift.io/vcs-ref: ''
spec:
  selector:
    app: frontend
    deploymentconfig: frontend
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: 8080-tcp
