deployment/vod-frontend/frontend-app/frontend/all.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: frontend
  namespace: vod-frontend
  labels:
    app: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: frontend
    app.openshift.io/runtime: python
    app.kubernetes.io/part-of: frontend-app
    app.openshift.io/runtime-version: 3.9-ubi8
  annotations:
    app.openshift.io/vcs-uri: https://github.com/nutanixdev/modern-app-demo.git
    app.openshift.io/vcs-ref: ''
    app.openshift.io/route-disabled: 'false'
spec:
  selector:
    app: frontend
    deploymentconfig: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        deploymentconfig: frontend
    spec:
      containers:
      - name: frontend
        image: frontend:latest
        command: ['/bin/bash', 'run.sh']
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - frontend
      from:
        kind: ImageStreamTag
        name: frontend:latest
  - type: ConfigChange
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: vod-frontend
  labels:
    app: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: frontend
    app.openshift.io/runtime: python
    app.kubernetes.io/part-of: frontend-app
    app.openshift.io/runtime-version: 3.9-ubi8
  annotations:
    app.openshift.io/vcs-uri: https://github.com/nutanixdev/modern-app-demo.git
    app.openshift.io/vcs-ref: ''
spec:
  selector:
    app: frontend
    deploymentconfig: frontend
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: 8080-tcp
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
  namespace: vod-frontend
  labels:
    app: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: frontend
    app.openshift.io/runtime: python
    app.kubernetes.io/part-of: frontend-app
    app.openshift.io/runtime-version: 3.9-ubi8
  defaultAnnotations:
    app.openshift.io/vcs-uri: https://github.com/nutanixdev/modern-app-demo.git
    app.openshift.io/vcs-ref: ''
spec:
  to:
    kind: Service
    name: frontend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
    caCertificate: ''
    certificate: ''
    destinationCACertificate: ''
    key: ''
  host: ''
  path: ''
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
